objects/Inventory_Request_Progress_Indicators__mdt.object
<CustomObject>
    <fields>
        <fullName>Applicable_Record_Type_Dev_Names__c</fullName>
        <description>Future enhancement.</description>
        <inlineHelpText>Future enhancement.</inlineHelpText>
        <label>Applicable Record Type Dev Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description of the progress stage (you can put raw html here)</description>
        <inlineHelpText>Description of the progress stage (you can put raw html here)</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DisplayValue__c</fullName>
        <description>The actual value displayed.</description>
        <inlineHelpText>The actual value displayed.</inlineHelpText>
        <label>DisplayValue</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The api value of the selected &apos;stage&apos;</description>
        <inlineHelpText>The api value of the selected &apos;stage&apos;</inlineHelpText>
        <label>Value</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Inventory Request Progress Indicator</label>
    <pluralLabel>Inventory Request Progress Indicators</pluralLabel>
</CustomObject>